<resources>
    <string name="app_name">MortgageCalculator</string>

    <!--action bar items-->
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>

    <string name="button_calculate">Calculate</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="home_value">Home Value ($)</string>
    <string name="down_payment">Down Payment ($)</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="terms">Terms (Years)</string>
    <string name="tax">Property Tax Rate (%)</string>
    <string name="monthly_payment">Monthly Payment ($)</string>
    <string name="interest_paid">Total Interest Paid ($)</string>
    <string name="property_tax_paid">Total Tax Paid ($)</string>
    <string name="payoff_date">Payoff Date</string>

    <!-- Choices for Terms Spinner -->
    <string-array name="terms_array">
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
    </string-array>

</resources>
